@@ -51,6 +51,9 @@ NEW FEATURES
 
     o	findInterval(x, v) now allows +/-Inf values, and NAs in x.
 
+    o   subset() now allows a `drop' argument to remove unused factor
+        levels. The default is still to keep them. 
+
 
 UTILITIES
 
